--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
+<!-- 
+Made by By EXELVI#8345
+For ItzLucio#4917 
+Before using/copying ask to EXELVI#8345
+-->
 <html>
 
 <head>
     <title>WebHook Api</title>
     <script src="script.js"></script>
-    <link rel="icon"
-        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.99em%22 font-size=%2299%22></text>🌀</svg>" />
 </head>
 
 <body>
-    <h2 class="text-center">EXELVI's API</h2>
-    <label for="username">
-        content = contenuto del messaggio;
-        username = nome del webhook;
-        etitle = titolo dell'embed;
-        edescription = descrizione dell'embed;
-        color = colore dell'embed;
-        efooter = footer dell'embed;</label>
-  
+    <text>
+        EXELVI'S API
+    </text>
 </body>
 
 </html>
+
+
